force-app/main/default/objects/Project_Contract__c/Project_Contract__c.object-meta.xml
<CustomObject>
    <label>Project/Contract</label>
    <nameField>
        <label>Project/Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects/Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>