force-app/main/default/objects/Project_Contract__c/fields/PITS_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>PITS_Customer_Account__c</fullName>
    <label>Customer/Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects/Contracts</relationshipLabel>
    <relationshipName>Projects_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>