force-app/main/default/objects/Project_Contract__c/fields/PITS_Project_Billing__c.field-meta.xml
<CustomField>
    <fullName>PITS_Project_Billing__c</fullName>
    <label>Project Billing</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly_Fixed_Price</fullName>
                <label>Monthly Fixed Price</label>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>