force-app/main/default/objects/Project_Contract__c/fields/PITS_Project_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>PITS_Project_Contract_Type__c</fullName>
    <label>Project/Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staff Augmentation</fullName>
            </value>
            <value>
                <fullName>Times &amp; Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>