force-app/main/default/objects/Project_Contract__c/fields/PITS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PITS_Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>