force-app/main/default/objects/Project_Contract__c/validationRules/End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date</fullName>
    <active>true</active>
    <description>The end date cannot be earlier than the start date, or the contract must have a minimum duration of one month</description>
    <errorConditionFormula>OR(
   PITS_End_Date__c  &lt;  PITS_Start_Date__c ,
  PITS_End_Date__c &lt; ADDMONTHS(PITS_Start_Date__c , 1)
)</errorConditionFormula>
    <errorMessage>The end date cannot be earlier than the start date, or the contract must have a minimum duration of one month</errorMessage>
</ValidationRule>