force-app/main/default/objects/Project_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PITS_Customer_Account__c</columns>
    <columns>PITS_Project_Billing__c</columns>
    <columns>PITS_Project_Contract_Type__c</columns>
    <columns>PITS_Start_Date__c</columns>
    <columns>PITS_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>